--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <string name="app_name">Shadowsocks</string>
+  <string name="app_name">Hipo</string>
   <string name="quick_toggle">Toggle</string>
 
   <!-- misc -->
@@ -49,7 +49,7 @@
   <string name="bypass_apps">Bypass Mode</string>
   <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
   <string name="auto_connect">Auto Connect</string>
-  <string name="auto_connect_summary">Enable Shadowsocks on startup</string>
+  <string name="auto_connect_summary">Enable Hipo on startup</string>
   <string name="tcp_fastopen_summary">Toggling requires ROOT permission</string>
   <string name="tcp_fastopen_summary_unsupported">Unsupported kernel version: %s &lt; 3.7.1</string>
   <string name="udp_dns">DNS Forwarding</string>
@@ -58,7 +58,7 @@
   <!-- notification category -->
   <string name="service_vpn">VPN Service</string>
   <string name="service_nat">NAT Service</string>
-  <string name="forward_success">Shadowsocks started.</string>
+  <string name="forward_success">Hipo started.</string>
   <string name="invalid_server">Invalid server name</string>
   <string name="service_failed">Failed to connect the remote server</string>
   <string name="nat_deprecated">WARNING: NAT mode has been deprecated since Android 5.0</string>
@@ -85,7 +85,7 @@
   <string name="faq_url">https://github.com/shadowsocks/shadowsocks-android/blob/master/.github/faq.md</string>
   <string name="recovery">Reset</string>
   <string name="about">About</string>
-  <string name="about_title">Shadowsocks %s</string>
+  <string name="about_title">Hipo %s</string>
   <string name="edit">Edit</string>
   <string name="share">Share</string>
   <string name="add_profile">Add Profile</string>
@@ -102,7 +102,7 @@
   <string name="delete">Remove</string>
   <string name="delete_confirm_prompt">Are you sure you want to remove this profile?</string>
   <string name="share_qr_nfc">QR code/NFC</string>
-  <string name="add_profile_dialog">Add this Shadowsocks Profile?</string>
+  <string name="add_profile_dialog">Add this Hipo Profile?</string>
   <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
   <string name="add_profile_methods_manual_settings">Manual Settings</string>
   <string name="add_profile_scanner_not_installed">Please install any ZXing-compliant QR code scanning app.</string>
